inital navbar and styles setup

--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -1,3 +1,4 @@
-@forward './colors' as colors-*;
-@forward './fonts' as fonts-*;
-@forward './spacing' as spacing-*;
+@forward './colors';
+@forward './fonts';
+@forward './spacing';
+@forward './shadows';
