--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,10 @@
+@use '../../scss' as styles;
+
 body {
   margin: 0;
   padding: 0;
+  font-family: styles.$default-font;
+  font-weight: styles.$thin;
 }
 
 .App {
