--- a/src/scss/_spacing.scss
+++ b/src/scss/_spacing.scss
@@ -1,4 +1,6 @@
 $spacing-1rem: 1rem;
+$spacing-12rem: 1.2rem;
+$spacing-15rem: 1.5rem;
 $spacing-05rem: 0.5rem;
 $spacing-025rem: 0.25rem;
 $spacing-043rem: 0.43rem;
