style tweaks to nav side menu

--- a/src/scss/_spacing.scss
+++ b/src/scss/_spacing.scss
@@ -8,5 +8,6 @@ $spacing-065rem: 0.65rem;
 $spacing-075rem: 0.75rem;
 $spacing-083rem: 0.83rem;
 $spacing-2rem: 2rem;
+$spacing-25rem: 2.5rem;
 $spacing-3rem: 3rem;
 $spacing-4rem: 4rem;
