--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -56,7 +56,7 @@
         gap: $spacing-15rem;
 
         width: 225px;
-        overflow-x: auto;
+        
     }
 
     .side-contact{
@@ -65,16 +65,17 @@
         gap: $spacing-075rem;
 
         color: $white;
-        font-size: $font-size-12;
+        font-size: $font-size-1;
     }
 
     .side-cotact-logo {
         color: $white;
-        font-size: $font-size-2;
+        font-size: $font-size-15;
     }
 
     .side-contact-link {
         text-decoration: underline;
+        white-space: pre-wrap;
     }
 
     .side-contact-container {
@@ -84,6 +85,7 @@
     }
 
     .side-footer {
+        margin-top: $spacing-1rem;
         color: $gray;
         display: flex;
         flex-direction: column;
