implementing disktop header

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -21,7 +21,7 @@ $font-size-5: 5rem;
 
 $default-font: 'Unity', sans-serif;
 $title-font: 'Unity-Large', sans-serif;
-$extra-thin: 100;
-$thin: 200;
-$regular: 300;
-$bold: 700;
+$weight-extra-thin: 100;
+$weight-thin: 200;
+$weight-regular: 300;
+$weight-bold: 700;
