--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: styles.$default-font;
-  font-weight: styles.$thin;
+  font-weight: styles.$weight-thin;
 
   overflow-x: hidden !important;
 }
