link stylings and routes

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,13 +1,46 @@
-@use '../../scss' as styles;
+@use '../../scss' as *;
 
 body {
   margin: 0;
   padding: 0;
-  font-family: styles.$default-font;
-  font-weight: styles.$weight-thin;
+  font-family: $default-font;
+  font-weight: $weight-thin;
 
   overflow-x: hidden !important;
 }
+
+a {
+  position: relative;
+  text-decoration: none;
+  color: $default-font;
+  padding-bottom: 4px;
+}
+
+a::before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: $link-color;
+  visibility: hidden;
+  transition: all $default-transition ease-in-out;
+}
+
+a:hover::before {
+  visibility: visible;
+  width: 100%;
+}
+
+a.white-underline::before {
+  background-color: $white;
+}
+
+a.no-underline:hover::before {
+  visibility: hidden;
+}
+
 
 .App {
   text-align: center;
