--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -5,4 +5,4 @@ $default-text: #000000;
 $subtext-color: #A8A8A8; // for text below the titles or captions
 $white: #FFFFFF;
 $gray: #CACACA;
-$link-color: #730101;
+$link-color: #bc4040;
