--- a/src/components/NavBar/MobileNav.scss
+++ b/src/components/NavBar/MobileNav.scss
@@ -40,7 +40,9 @@
         flex-direction: column;
         gap: $spacing-05rem;
 
-        color: $white;
+        & div > a {
+            color: $white;
+        }
         font-size: $font-size-15;
     }
 
