--- a/src/components/NavBar/DesktopNav.scss
+++ b/src/components/NavBar/DesktopNav.scss
@@ -2,7 +2,13 @@
 
     .navbar-container.desktop{
         padding: $spacing-05rem $spacing-4rem $spacing-025rem $spacing-4rem;
-
+        @media (min-width: 768px) {
+            .navbar-container.desktop {
+              display: none;
+              background-color: red;
+            }
+          }
+          
     }
 
     .menu-cover {
@@ -25,11 +31,16 @@
         font-weight: $weight-regular;
         gap: $spacing-1rem;
         margin-right: $spacing-3rem;
-        padding-bottom: $spacing-025rem;
+        padding-bottom: $spacing-05rem;
 
         & a {
             color: $unity-black;
+            transition: $fast-transition;
+            &:hover {
+                color: $gray;
+            }
         }
+        
     }
 
     
@@ -49,21 +60,26 @@
         transform: translate(2rem, 1rem);
     }
 
-    .side-menu.desktop {
+    .side-menu {
         position: absolute;
         top: 0;
-        right: -100vw;
+        right: 0;
         width: 250px;
         height: 100%;
         padding: $spacing-3rem 0 0 $spacing-2rem;
-
+    
+        overflow-y: hidden;
         background-color: $primary-color;
-
-        transition: right $default-transition ease-in-out;
+    
+        transform: translateX(100%);
+        transition: transform $default-transition, opacity $default-transition;
+        opacity: 0;
     }
-
-    .side-menu.desktop.active {
-        right: 0;
+    
+    .side-menu.active {
+        transform: translateX(0);
+        opacity: 1;
     }
+    
 
 
