--- a/src/components/NavBar/MobileNav.scss
+++ b/src/components/NavBar/MobileNav.scss
@@ -21,19 +21,27 @@
     .side-menu {
         position: absolute;
         top: 0;
-        right: -100vw;
+        right: 0;
         width: 250px;
         height: 100%;
         padding: $spacing-25rem 0 0 $spacing-2rem;
-
+    
+        overflow-y: hidden;
         background-color: $primary-color;
-
-        transition: right $default-transition;
+    
+        transform: translateX(100%);
+        transition: transform $default-transition, opacity $default-transition;
+        opacity: 0;
     }
-
+    
     .side-menu.active {
-        right: 0;
+        transform: translateX(0);
+        opacity: 1;
     }
+    
+    
+    
+    
 
     .side-nav-links {
         display: flex;
