--- a/src/components/NavBar/DesktopNav.scss
+++ b/src/components/NavBar/DesktopNav.scss
@@ -65,7 +65,7 @@
         top: 0;
         right: 0;
         width: 250px;
-        height: 100%;
+        height: 100vh;
         padding: $spacing-3rem 0 0 $spacing-2rem;
     
         overflow-y: hidden;
@@ -79,6 +79,12 @@
     .side-menu.active {
         transform: translateX(0);
         opacity: 1;
+    }
+    
+    .nav-menu-sticky {
+        position:sticky;
+        right: 0;
+        top: 0;
     }
     
 
