--- a/src/components/NavBar/DesktopNav.scss
+++ b/src/components/NavBar/DesktopNav.scss
@@ -34,10 +34,10 @@
         padding-bottom: $spacing-05rem;
 
         & a {
-            color: $unity-black;
+            color: $color-black;
             transition: $fast-transition;
             &:hover {
-                color: $gray;
+                color: $color-gray;
             }
         }
         
@@ -56,7 +56,7 @@
     }
 
     .nav-button.desktop.active {
-        color: $white;
+        color: $color-white;
         transform: translate(2rem, 1rem);
     }
 
@@ -69,7 +69,7 @@
         padding: $spacing-3rem 0 0 $spacing-2rem;
     
         overflow-y: hidden;
-        background-color: $primary-color;
+        background-color: $color-primary;
     
         transform: translateX(100%);
         transition: transform $default-transition, opacity $default-transition;
