--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,8 +1,9 @@
-$primary-color: #570B0B; // main color
-$unity-black: #171717; // used for things like buttons
+$color-primary: #570B0B; // main color
+$color-black: #171717; // used for things like buttons
 $title-dark: #2F0000; // used for headers that are dark
 $default-text: #000000;
 $subtext-color: #A8A8A8; // for text below the titles or captions
-$white: #FFFFFF;
-$gray: #CACACA;
+$color-white: #FFFFFF;
+$color-gray: #CACACA;
 $link-color: #bc4040;
+$color-dark-gray: #1A1A1A;
