--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -7,6 +7,8 @@ body {
   font-weight: $weight-thin;
 
   overflow-x: hidden !important;
+
+  min-width: 343px;
 }
 
 a {
@@ -22,3 +24,6 @@ a {
   color: red;
 }
 
+.test-height {
+  height: 90vh;
+}
