--- a/src/components/NavBar/MobileNav.scss
+++ b/src/components/NavBar/MobileNav.scss
@@ -13,7 +13,7 @@
 
     .nav-button {
         z-index: 9999;
-        transition: color $default-transition;
+        transition: color $transition-default;
     }
 
     .nav-button.active {
@@ -28,11 +28,10 @@
         height: 100vh;
         padding: $spacing-25rem 0 0 $spacing-2rem;
     
-        overflow-y: hidden;
         background-color: $color-primary;
     
         transform: translateX(100%);
-        transition: transform $default-transition, opacity $default-transition;
+        transition: transform $transition-default opacity $transition-default;
         opacity: 0;
     }
     
