--- a/src/scss/_transitions.scss
+++ b/src/scss/_transitions.scss
@@ -1,3 +1,4 @@
-$default-transition: 250ms;
-$slow-transition: 500ms;
-$fast-transition: 150ms;
+$transition-default: 250ms;
+$transition-slow: 500ms;
+$transition-fast: 150ms;
+$transition-medium: 200ms;
