implemented header UI

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;700&family=Lexend:wght@100;200;300;700&display=swap%27');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;700&family=Lexend:wght@100;200;300;400;500;600;700&display=swap%27');
 
 $font-size-1: 1rem;
 $font-size-05: .5rem;
@@ -8,7 +8,8 @@ $font-size-15: 1.5rem;
 $font-size-175: 1.75rem;
 $font-size-18: 1.8rem;
 $font-size-2: 2rem;
-$font-size-4: 3rem;
+$font-size-25: 2.5rem;
+$font-size-3: 3rem;
 $font-size-4: 4rem;
 $font-size-5: 5rem;
 
@@ -17,4 +18,5 @@ $title-font: 'Lexend', sans-serif;
 $weight-extra-thin: 100;
 $weight-thin: 200;
 $weight-regular: 300;
+$weight-medium: 400;
 $weight-bold: 700;
