--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,27 +4,30 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    row-gap: $spacing-1rem;
     padding-left: $spacing-15rem;
-    padding-top: $spacing-075rem;
-    padding-bottom: $spacing-083rem;
-    background-color: $color-primary-dark;
+    padding-top: $spacing-1rem;
+    padding-bottom: $spacing-2rem;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(24, 0, 0, 0.451389) 77.43%, #340000 100%),
+linear-gradient(0deg, #570B0B, #570B0B);
+
     .header-title-container {
         color: $color-white;
-        font-size: $font-size-2;
+        font-size: $font-size-25;
         font-family: $title-font;
-        padding-right: $spacing-4rem;
+        font-weight: $weight-medium;
     }
     .header-topic-container {
         color: $color-subtext-color;
         font-size: $font-size-1;
+        font-weight: $weight-regular;
     }
     .header-description-container {
+        padding-top: $spacing-1rem;
         color: $color-white;
         font-size: $font-size-1;
         font-family: $default-font;
         font-weight: $weight-thin;
         word-wrap: break-word;
-        padding-right: $spacing-4rem;
+        padding-right: $spacing-4rem + $spacing-15rem;
     }
 }
