--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;700&family=Lexend:wght@100;200;300;400;500;600;700&display=swap%27');
+
 $font-size-1: 1rem;
 $font-size-05: .5rem;
 $font-size-086: .86rem;
@@ -6,23 +8,15 @@ $font-size-15: 1.5rem;
 $font-size-175: 1.75rem;
 $font-size-18: 1.8rem;
 $font-size-2: 2rem;
-$font-size-4: 3rem;
+$font-size-25: 2.5rem;
+$font-size-3: 3rem;
 $font-size-4: 4rem;
 $font-size-5: 5rem;
 
-@font-face {
-    font-family: 'Unity';
-    src: local('Inter') url(./fonts/Inter/Inter-VariableFont_slntwght.ttf) format('truetype-variations');
-}
-
-@font-face {
-    font-family: 'Unity-Large';
-    src: local('Lexend') url(./fonts/Lexend/Lexend-VariableFont_wght.ttf) format('truetype-variations');
-}
-
-$default-font: 'Unity', sans-serif;
-$title-font: 'Unity-Large', sans-serif;
+$default-font: 'Inter', sans-serif;
+$title-font: 'Lexend', sans-serif;
 $weight-extra-thin: 100;
 $weight-thin: 200;
 $weight-regular: 300;
+$weight-medium: 400;
 $weight-bold: 700;
