--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -6,5 +6,7 @@ $color-default-text: #000000;
 $color-subtext-color: #A8A8A8; // for text below the titles or captions
 $color-white: #FFFFFF;
 $color-gray: #CACACA;
-$color-link: #bc4040;
+$color-red-link: #bc4040;
 $color-dark-gray: #1A1A1A;
+$color-blue-link: #2F70AB;
+$color-article-header-background: #262626;
