--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -10,3 +10,6 @@ $color-red-link: #bc4040;
 $color-dark-gray: #1A1A1A;
 $color-blue-link: #2F70AB;
 $color-article-header-background: #262626;
+
+$color-article-left-gutter: #EDEDED;
+$color-article-right-gutter: #F6F6F6;
