--- a/src/components/BackNav/BackNav.scss
+++ b/src/components/BackNav/BackNav.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     color: $color-blue-link;
     font-size: $font-size-1;
+    gap: $spacing-05rem;
     
     .back-nav-link {
         font-weight: $weight-regular;
