--- a/src/components/HomeBooking/HomeBooking.scss
+++ b/src/components/HomeBooking/HomeBooking.scss
@@ -8,8 +8,8 @@
     padding-top: $spacing-1rem;
     padding-bottom: $spacing-2rem;
     background-color: $color-white;
-    margin-bottom: 4px;
     box-shadow: 0px 4px 4px 0px #00000040;
+    margin-bottom: $spacing-2rem;
     .home-booking-title-container {
         color: $color-primary;
         font-size: $font-size-25;
