--- a/src/components/HomeLearnMore/HomeLearnMore.scss
+++ b/src/components/HomeLearnMore/HomeLearnMore.scss
@@ -1,58 +1,65 @@
 @use '../../scss' as *;
 
-.home-learn-more-container {
+.home-learn-more-main-container {
     display: flex;
-    flex-direction: column;
     width: 100%;
-    padding-left: $spacing-15rem;
-    padding-top: $spacing-1rem;
-    padding-bottom: $spacing-2rem;
-    background-color: $color-white;
-    margin-bottom: 4px;
-    box-shadow: 0px 4px 4px 0px #00000040;
-    .home-learn-more-image-container {
-        padding-right: $spacing-3rem;
-        clip-path: polygon(100% 0, 100% 32%, 72% 90%, 0 100%, 0 0);
-    }
-    .home-learn-more-bottom-container {
-        padding-left: $spacing-1rem;
-        .home-learn-more-title-container {
-            color: $color-black;
-            font-size: $font-size-25;
-            font-family: $title-font;
-            font-weight: $weight-medium;
+    justify-content: center;
+    align-items: center;
+    .home-learn-more-container {
+        display: flex;
+        flex-direction: column;
+        width: 21rem;
+        padding-bottom: $spacing-2rem;
+        background-color: $color-white;
+        box-shadow: 0px 2px 3px 1px #00000045;
+        border-radius: $spacing-05rem;
+        margin-bottom: $spacing-2rem;
+        .home-learn-more-image-container {
+            width: 100%;
+            border-radius: $spacing-05rem $spacing-05rem 0 0;
+            // clip-path: polygon(100% 0, 100% 32%, 72% 90%, 0 100%, 0 0);
         }
-        .home-learn-more-topic-container {
-            color: $color-subtext-color;
-            font-size: $font-size-1;
-            font-weight: $weight-regular;
-        }
-        .home-learn-more-description-container {
-            padding-top: $spacing-075rem;
-            color: $color-default-text;
-            font-size: $font-size-1;
-            font-family: $default-font;
-            font-weight: $weight-medium;
-            word-wrap: break-word;
-            padding-right: $spacing-4rem;
-        }
-        .home-learn-more-buttom-container {
-            background-color: $color-black;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-right: $spacing-3rem;
-            padding: $spacing-075rem;
-            border-radius: 6px;
-            color: $color-white;
-            font-size: $font-size-15;
-            font-weight: $weight-thin;
-            margin-top: $spacing-15rem;
-        }
-        .home-learn-more-right-arrow-container {
-            font-size: $font-size-086;
-            padding-left: $spacing-1rem;
-            margin-top: 2px;
+        .home-learn-more-bottom-container {
+            padding-left: $spacing-15rem;
+            .home-learn-more-title-container {
+                color: $color-black;
+                font-size: $font-size-25;
+                font-family: $title-font;
+                font-weight: $weight-medium;
+                padding-top: $spacing-05rem;
+            }
+            .home-learn-more-topic-container {
+                color: $color-subtext-color;
+                font-size: $font-size-1;
+                font-weight: $weight-regular;
+            }
+            .home-learn-more-description-container {
+                padding-top: $spacing-075rem;
+                color: $color-default-text;
+                font-size: $font-size-1;
+                font-family: $default-font;
+                font-weight: $weight-medium;
+                word-wrap: break-word;
+                padding-right: $spacing-15rem;
+            }
+            .home-learn-more-buttom-container {
+                background-color: $color-black;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-right: $spacing-15rem;
+                padding: $spacing-075rem;
+                border-radius: 6px;
+                color: $color-white;
+                font-size: $font-size-15;
+                font-weight: $weight-thin;
+                margin-top: $spacing-15rem;
+            }
+            .home-learn-more-right-arrow-container {
+                font-size: $font-size-086;
+                padding-left: $spacing-1rem;
+                margin-top: 2px;
+            }
         }
     }
 }
