--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -10,3 +10,4 @@ $color-link: #bc4040;
 $color-dark-gray: #1A1A1A;
 $color-blue: #2F70AB;
 $color-shadow: #00000045;
+$color-article-header-background: #262626;
