Desktop article page (#7)
* initial setup and cleanup

* desktop fix, header fix, back nav

* desktop mobile determiner

* desktop article page layout

* header generator

--- a/src/components/BackNav/BackNav.scss
+++ b/src/components/BackNav/BackNav.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     color: $color-blue;
     font-size: $font-size-1;
+    gap: $spacing-05rem;
     
     .back-nav-link {
         font-weight: $weight-regular;
