--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -8,6 +8,9 @@ $color-white: #FFFFFF;
 $color-gray: #CACACA;
 $color-link: #bc4040;
 $color-dark-gray: #1A1A1A;
+$color-article-header-background: #262626;
+$color-article-left-gutter: #EDEDED;
+$color-article-right-gutter: #F6F6F6;
 $color-blue: #2F70AB;
 $color-shadow: #00000045;
-$color-article-header-background: #262626;
+
