article nav shell

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -13,4 +13,5 @@ $color-article-left-gutter: #EDEDED;
 $color-article-right-gutter: #F6F6F6;
 $color-blue: #2F70AB;
 $color-shadow: #00000045;
-
+$color-gray-text: #838383;
+$color-title-gray: #434343;
