--- a/src/scss/_spacing.scss
+++ b/src/scss/_spacing.scss
@@ -11,3 +11,5 @@ $spacing-2rem: 2rem;
 $spacing-25rem: 2.5rem;
 $spacing-3rem: 3rem;
 $spacing-4rem: 4rem;
+$spacing-5rem: 5rem;
+$spacing-6rem: 6rem;
