--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,16 +1,16 @@
 @use '../../scss' as *;
 
-#root {
-  overflow: hidden;
+.app-container {
+  position: relative;
+  overflow-x: hidden;
 }
-
 body {
   margin: 0;
   padding: 0;
   font-family: $default-font;
   font-weight: $weight-thin;
 
-  overflow-x: hidden !important;
+  // overflow-x: hidden !important;
 
   min-width: 343px;
 }
