--- a/src/components/ArticleNav/ArticleNav.scss
+++ b/src/components/ArticleNav/ArticleNav.scss
@@ -3,6 +3,8 @@
 .article-nav-container {
     margin-top: $spacing-3rem;
     margin-left: $spacing-2rem;
+    display: flex;
+    flex-direction: column;
     .article-timeline {
         width: 3px;
         background-color: $color-gray;
@@ -34,5 +36,36 @@
     .article-nav-item {
         padding-bottom: $spacing-05rem;
     }
-    
+
+    .article-nav-divider {
+        margin-top: $spacing-2rem;
+        margin-bottom: $spacing-2rem;
+        width: 70%;
+        height: 1px;
+        background-color: $color-gray;
+    }
+    ul.topics-items {
+        margin-top: $spacing-05rem;
+    }
+    .topics-items {
+        color: $color-gray-text;
+        font-weight: $weight-regular;
+        padding-left: $spacing-1rem;
+
+        & li {
+            text-decoration: underline;
+            padding-bottom: $spacing-05rem;
+            color: $color-gray-text;
+        }
+    }
+
+    .topics-title {
+        font-weight: $weight-medium;
+        font-size: $font-size-15;
+        color: $color-gray-text;
+    }
+
+    .article-nav-sticky {
+        transition: $transition-slow;
+    }
 }
