--- a/src/components/BackHeader/BackHeader.scss
+++ b/src/components/BackHeader/BackHeader.scss
@@ -7,6 +7,8 @@
     padding-bottom: 0;
     background-color: $color-white;
     align-items: center;
+    user-select: none;
+    cursor: pointer;
     .back-header-left-arrow-container {
         font-size: $font-size-05;
         margin-top: 2px;
@@ -18,6 +20,6 @@
         padding-bottom: 0;
         color: $color-blue;
         font-weight: $weight-medium;
-        font-size: $font-size-086;
+        font-size: $font-size-1;
     }
 }
