fixing navbar on scroll when hamburger active

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -15,6 +15,11 @@ body {
   min-width: 343px;
 }
 
+body.modal-open {
+  margin-right: 10px;
+}
+
+
 a {
   position: relative;
   text-decoration: none;
