css revisions and menu tab changes mobile

--- a/src/components/Accordion/Accordion.scss
+++ b/src/components/Accordion/Accordion.scss
@@ -5,6 +5,7 @@
     padding-right: $spacing-2rem;
     .menu-line-container {opacity: .3;}
     .accordion-title-container {
+        padding-top: $spacing-05rem;
         cursor: pointer;
         user-select: none;
         display: flex;
