--- a/src/pages/Mobile/Menu/Menu.scss
+++ b/src/pages/Mobile/Menu/Menu.scss
@@ -3,6 +3,8 @@
 .accordion-width-center-container {
     display: flex;
     width: 100%;
+    margin-top: -$spacing-1rem;
+    margin-bottom: -$spacing-1rem;
 }
 
 .accordion-width-container {
