--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -7,6 +7,7 @@ $color-subtext-color: #A8A8A8; // for text below the titles or captions
 $color-white: #FFFFFF;
 $color-gray: #CACACA;
 $color-link: #bc4040;
+$color-link-hover: #850606;
 $color-dark-gray: #1A1A1A;
 $color-article-header-background: #262626;
 $color-article-left-gutter: #EDEDED;
