--- a/src/components/Email/Email.scss
+++ b/src/components/Email/Email.scss
@@ -6,7 +6,7 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px -2px 4px 0px rgb(0 0 0 / 30%);
+    box-shadow: $shadow-top;
     .email-container {
         display: flex;
         flex-direction: column;
