--- a/src/components/NavBar/MobileNav.scss
+++ b/src/components/NavBar/MobileNav.scss
@@ -6,7 +6,7 @@
         justify-content: space-between;
 
         padding: $spacing-025rem $spacing-1rem $spacing-025rem $spacing-1rem;
-        box-shadow: $header-shadow;
+        box-shadow: $shadow-header;
 
         background-color: $color-white;
     }
