--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -15,6 +15,10 @@
     position: relative;
 }
 
+.navbar-container {
+    z-index: 9990;
+}
+
 .navbar-container * , .side-menu .side-nav-links *{
     user-select: none;
 }
@@ -36,7 +40,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 9990;
   }
   .headroom--unfixed {
     position: relative;
