--- a/src/scss/_shadows.scss
+++ b/src/scss/_shadows.scss
@@ -1,2 +1,3 @@
-$header-shadow: 0 4px 13px -3px rgba(0, 0, 0, 0.10196);
-$card-shadow: 0px 2px 3px 1px #00000045;
+$shadow-header: 0 4px 13px -3px rgba(0, 0, 0, 0.10196);
+$shadow-card: 0px 2px 3px 1px #00000045;
+$shadow-top: 0px -2px 4px 0px rgb(0 0 0 / 30%);
