--- a/src/components/HomeBooking/HomeBooking.scss
+++ b/src/components/HomeBooking/HomeBooking.scss
@@ -15,6 +15,7 @@
         font-size: $font-size-25;
         font-family: $title-font;
         font-weight: $weight-medium;
+        padding-right: $spacing-2rem;
     }
     .home-booking-topic-container {
         color: $color-subtext-color;
