--- a/src/components/HomeHeader/HomeHeader.scss
+++ b/src/components/HomeHeader/HomeHeader.scss
@@ -1,14 +1,19 @@
 @use '../../scss' as *;
 
+.home-header-guide {
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(24, 0, 0, 0.451389) 77.43%, #340000 100%), linear-gradient(0deg, #570B0B, #570B0B);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 .home-header-container {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 600px;
     padding-left: $spacing-15rem;
     padding-top: $spacing-1rem;
     padding-bottom: $spacing-2rem;
     color: $color-white;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(24, 0, 0, 0.451389) 77.43%, #340000 100%), linear-gradient(0deg, #570B0B, #570B0B);
     .home-header-title-container {
         font-family: $title-font;
         font-weight: $weight-medium;
