--- a/src/components/BodyText/BodyText.scss
+++ b/src/components/BodyText/BodyText.scss
@@ -6,4 +6,14 @@
         font-size: $font-size-12;
         font-weight: $weight-medium;
     }
+    .section-separator {
+        width: 100%;
+        margin-top: $spacing-4rem;
+        margin-bottom: $spacing-3rem;
+        height: 1px;
+        background-color: $color-gray;
+    }
+    span{
+        font-weight: $weight-bold;
+    }
 }
