--- a/src/pages/Mobile/Menu/Menu.scss
+++ b/src/pages/Mobile/Menu/Menu.scss
@@ -22,3 +22,7 @@
     font-size: $font-size-086;
     font-weight: $weight-regular;
 }
+
+p .food-menu-description-subtext-container {
+    padding-left: $spacing-1rem;
+}
